samples/_failures_safe/1761663186_7c1ab7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17c98237.c: In function ‘main’:
./samples/SAFE/__tmp_17c98237.c:172:9: error: expected declaration or statement at end of input
  172 |         if (k >= token_count) break;
      |         ^~
./samples/SAFE/__tmp_17c98237.c:172:9: error: expected declaration or statement at end of input
